--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "react": "^18",
+    "react-beautiful-dnd-next": "^11.0.5",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
