--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.6.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -24,7 +25,6 @@
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "react": "^18",
-    "react-beautiful-dnd-next": "^11.0.5",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
